# nanogpt-ggml

./: .gitmodules  CMakeLists.txt  README.md  dataset.c  dataset.h  main.c  model.c  model.h  utility.c  utility.h
tests/: test_dataset.c  test_model_prediction.c  test_model_stage1.c
